--- a/ace_page.html
+++ b/ace_page.html
@@ -18,7 +18,7 @@
 <div class="container-code">
     <div id="editor">some test sstring</div>
 </div>
-<script src="Lib/site-packages/ace/ace.js" type="text/javascript" charset="utf-8"></script>
+<script src="ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/ambiance");
